--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,16 @@ dependencies:
     sdk: flutter
   intl: any
   firebase_core: ^3.6.0
+  auto_route: ^9.2.2
+  elementary: ^3.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  auto_route_generator: ^9.0.0
+  build_runner: ^2.4.13
 
 flutter:
   generate: true
