--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   firebase_core: ^3.6.0
   auto_route: ^9.2.2
   elementary: ^3.2.0
+  freezed_annotation: ^2.4.4
+  flutter_masked_text2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
@@ -27,11 +29,12 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   auto_route_generator: ^9.0.0
   build_runner: ^2.4.13
+  freezed: ^2.5.7
 
 flutter:
   generate: true
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/pivo1.webp
   #   - images/a_dot_ham.jpeg
