--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,11 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
+    dependencies {
+        implementation 'com.yandex.android:maps.mobile:4.6.1-lite'
+    }
+
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.itmo.pivo.app.pivo_front"
