--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   elementary: ^3.2.0
   freezed_annotation: ^2.4.4
   flutter_masked_text2: ^0.9.1
+  flutter_osm_plugin: ^1.3.5
+  yandex_mapkit: ^4.1.0
 
 dev_dependencies:
   flutter_test:
