--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,18 @@ dependencies:
   flutter_masked_text2: ^0.9.1
   flutter_osm_plugin: ^1.3.5
   yandex_mapkit: ^4.1.0
+  rxdart: ^0.28.0
+  dio: ^5.7.0
+  retrofit: ^4.4.1
+  dadata_suggestions:
+    git:
+      url: https://github.com/AurelVU/dadata_suggestions.git
+      ref: null_saffety
+  json_annotation: ^4.9.0
+  pinput: ^5.0.0
+  pretty_dio_logger: ^1.4.0
+  shared_preferences: ^2.3.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -32,11 +44,13 @@ dev_dependencies:
   auto_route_generator: ^9.0.0
   build_runner: ^2.4.13
   freezed: ^2.5.7
+  json_serializable: ^6.8.0
+  retrofit_generator: ^9.1.4
 
 flutter:
   generate: true
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/pivo1.webp
+   - assets/
   #   - images/a_dot_ham.jpeg
