--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.3.2
   provider: ^6.1.2
+  easy_debounce: ^2.0.3
+  pointer_interceptor: ^0.10.1+2
 
 dev_dependencies:
   flutter_test:
