--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.1.2
   easy_debounce: ^2.0.3
   pointer_interceptor: ^0.10.1+2
+  infinite_scroll_pagination: ^4.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
