--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   pointer_interceptor: ^0.10.1+2
   infinite_scroll_pagination: ^4.0.0
   cached_network_image: ^3.4.1
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
