--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   cached_network_image: ^3.4.1
   smooth_page_indicator: ^1.2.0+3
+  image_picker: ^1.1.2
+  aws_s3_api: ^2.0.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
