--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   aws_s3_api: ^2.0.0
   uuid: ^4.5.1
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
